# AI-LLM-Agents

./: README.md
agentic-ai/: README.md  config.yaml  coverage.xml  docker-compose.yml  example.py  learn.md  mlflow.db  poem_skill.py  pyproject.toml  run_agent.py
agentic-ai/memory_store/: test_thread_1.json  test_thread_async.json  test_thread_error.json  test_thread_simple.json
agentic-ai/reports/: code_quality_report.json  pipeline_summary_report.json  test_report.json
agentic-ai/sops/: quality_check.yaml
agentic-ai/src/agentic_ai_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agentic-ai/src/agents/: orchestrator.py  task_decomposer.py  validator.py
agentic-ai/src/mcp/: mcp_client.py
agentic-ai/src/memory/: file_memory_backend.py  memory_manager.py
agentic-ai/src/mlops/: pipeline.py
agentic-ai/src/models/finetuning/: trainer.py
agentic-ai/src/skills/: base_skill.py  skill_executor.py  skill_router.py  sop_executor.py
agentic-ai/src/workflows/: human_in_loop.py
agentic-ai/tests/: test_human_review_workflow.py  test_memory_manager.py  test_mlops_pipeline_mcp.py  test_orchestrator.py  test_result_validator.py  test_skill_executor.py  test_skill_router.py  test_task_decomposer.py
